# HelloNativeKMP

./: README.md  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/native/: build_desktop.sh  build_ios.sh
composeApp/native/src/: CMakeLists.txt  native_greeting.cpp  native_greeting.h
composeApp/src/androidMain/kotlin/dev/muazkadan/hellonative/: MainActivity.kt  NativeLibraryAndroid.kt  Platform.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/dev/muazkadan/hellonative/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonTest/kotlin/dev/muazkadan/hellonative/: ComposeAppCommonTest.kt
composeApp/src/desktopMain/kotlin/dev/muazkadan/hellonative/: NativeLibraryDesktop.kt  Platform.jvm.kt  main.kt
composeApp/src/iosMain/kotlin/dev/muazkadan/hellonative/: MainViewController.kt  Platform.ios.kt
composeApp/src/nativeInterop/cinterop/: native_greeting.def
composeApp/src/wasmJsMain/kotlin/dev/muazkadan/hellonative/: Platform.wasmJs.kt  main.kt
composeApp/src/wasmJsMain/resources/: index.html
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
